--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
@@ -28,10 +29,7 @@
     "per-env": "^1.0.2",
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1"
-  },
-  "devDependencies": {
-    "dotenv-cli": "^7.3.0",
+    "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6"
   }
 }
